@@ -16,15 +16,13 @@ import org.springframework.web.bind.ServletRequestUtils;
 import org.springframework.web.servlet.ModelAndView;
 import org.sventon.model.UserRepositoryContext;
 import org.sventon.web.command.SVNBaseCommand;
+import org.tmatesoft.svn.core.SVNException;
 import org.tmatesoft.svn.core.io.SVNFileRevision;
 import org.tmatesoft.svn.core.io.SVNRepository;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
  * Gets the file revision history for a given entry.
@@ -48,15 +46,18 @@ public final class GetFileHistoryController extends AbstractSVNTemplateControlle
                                    final BindException exception) throws Exception {
 
     final Map<String, Object> model = new HashMap<String, Object>();
-
-    logger.debug("Finding revisions for [" + svnCommand.getPath() + "]");
-
     final String archivedEntry = ServletRequestUtils.getStringParameter(request, ARCHIVED_ENTRY, null);
 
-    final List<SVNFileRevision> fileRevisions = getRepositoryService().getFileRevisions(
-        repository, svnCommand.getPath(), svnCommand.getRevisionNumber());
+    final List<SVNFileRevision> fileRevisions = new ArrayList<SVNFileRevision>();
+    try {
+      logger.debug("Finding revisions for [" + svnCommand.getPath() + "]");
+      fileRevisions.addAll(getRepositoryService().getFileRevisions(repository, svnCommand.getPath(),
+          svnCommand.getRevisionNumber()));
+      Collections.reverse(fileRevisions);
+    } catch (SVNException svnex) {
+      logger.error(svnex.getMessage());
+    }
 
-    Collections.reverse(fileRevisions);
     model.put("currentRevision", svnCommand.getRevisionNumber());
     model.put("fileRevisions", fileRevisions);
     if (archivedEntry != null) {
