@@ -16,6 +16,7 @@ import org.springframework.web.servlet.ModelAndView;
 import org.sventon.model.LogMessage;
 import org.sventon.model.UserRepositoryContext;
 import org.sventon.web.command.SVNBaseCommand;
+import org.tmatesoft.svn.core.SVNException;
 import org.tmatesoft.svn.core.SVNLogEntry;
 import org.tmatesoft.svn.core.io.SVNRepository;
 
@@ -40,11 +41,15 @@ public final class GetLogMessageController extends AbstractSVNTemplateController
                                    final HttpServletRequest request, final HttpServletResponse response,
                                    final BindException exception) throws Exception {
 
-    logger.debug("Getting log message from revision [" + svnCommand.getRevisionNumber() + "]");
-    final SVNLogEntry logEntry = getRepositoryService().getRevision(svnCommand.getName(), repository, svnCommand.getRevisionNumber());
-    final LogMessage logMessage = new LogMessage(svnCommand.getRevisionNumber(), logEntry.getMessage()); //TODO: Parse to apply Bugtraq link
-
     final Map<String, Object> model = new HashMap<String, Object>();
+    LogMessage logMessage = null;
+    try {
+      logger.debug("Getting log message from revision [" + svnCommand.getRevisionNumber() + "]");
+      final SVNLogEntry logEntry = getRepositoryService().getRevision(svnCommand.getName(), repository, svnCommand.getRevisionNumber());
+      logMessage = new LogMessage(svnCommand.getRevisionNumber(), logEntry.getMessage()); //TODO: Parse to apply Bugtraq link
+    } catch (SVNException svnex) {
+      logger.error(svnex.getMessage());
+    }
     model.put("logMessage", logMessage);
     return new ModelAndView("ajax/logMessage", model);
   }
